-(fix) attempt to resolve banner gt cropped at mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -603,12 +603,6 @@ footer a:hover {
   padding: 80px 40px;
   margin: 70px 0;
   text-align: center;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
 }
 
 .stats-container {
